--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="active">#52e038</color>
+    <color name="active">#39a127</color>
     <color name="inactive">#ff0000</color>
 
 </resources>
