--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -4,6 +4,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/insulina_ico" /> <!-- imagen centrada -->
+            android:src="@drawable/insulina_splash" /> <!-- imagen centrada -->
     </item>
 </layer-list>
