--- a/app/src/main/res/layout/activity_insulina_buscar.xml
+++ b/app/src/main/res/layout/activity_insulina_buscar.xml
@@ -15,8 +15,7 @@
 
         <TextView
             style="@style/TextViewNombrePantalla"
-            android:text="@string/search_insulin"
-            />
+            android:text="@string/search_insulin" />
 
         <ImageView
             android:layout_width="0dp"
