Cambio creacion archivos. Agrego ratio/CH al calculo de insulina necesaria

--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -4,6 +4,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/logo_chico" /> <!-- imagen centrada -->
+            android:src="@drawable/logo_splash" /> <!-- imagen centrada -->
     </item>
 </layer-list>
