--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -71,6 +71,16 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="EditTextIngresoDatosSmall">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">@color/purple_200</item>
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
     <style name="LinearLayoutNombrePantalla">
         <item name="android:background">@drawable/borde_color_fondo_oscuro</item>
         <item name="android:layout_margin">5dp</item>
@@ -87,7 +97,8 @@
         <item name="android:orientation">vertical</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:background">@drawable/borde_color_fino</item>
-        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingTop">5dp</item>
     </style>
 
     <style name="ListViewGeneral">
