--- a/app/src/main/res/layout/activity_insulina_buscar.xml
+++ b/app/src/main/res/layout/activity_insulina_buscar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -55,7 +56,6 @@
                     android:maxLines="1"
                     android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
                     android:id="@+id/nombreBuscarET" />
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
