--- a/app/src/main/res/layout/activity_insulina_activa.xml
+++ b/app/src/main/res/layout/activity_insulina_activa.xml
@@ -237,6 +237,21 @@
                                         android:textColor="@color/purple_700" />
                                 </LinearLayout>
                             </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="5dp"
+                                android:gravity="start"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    style="@style/EditTextIngresoDatosSmall"
+                                    android:gravity="center"
+                                    android:visibility="gone"
+                                    android:id="@+id/textoRatioCHTV"/>
+
+                            </LinearLayout>
+
                         </LinearLayout>
 
                         <LinearLayout
