--- a/app/src/main/res/layout/activity_insulina_activa.xml
+++ b/app/src/main/res/layout/activity_insulina_activa.xml
@@ -54,6 +54,65 @@
                         <TextView
                             style="@style/TextViewTitulo"
                             android:text="@string/insulin_active_data" />
+                        <LinearLayout
+                            style="@style/LinearLayoutSeccion">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_marginTop="10dp"
+                                android:orientation="horizontal">
+
+                                <RadioGroup
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:id="@+id/aplicacionRG">
+
+                                    <TextView
+                                        style="@style/TextViewIngresoDatos"
+                                        android:layout_marginRight="40dp"
+                                        android:gravity="center_vertical"
+                                        android:text="@string/application"/>
+
+                                    <RadioButton
+                                        style="@style/EditTextIngresoDatos"
+                                        android:id="@+id/apManualRB"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:button="@drawable/rb_insulin_pen"
+                                        android:checked="true"
+                                        android:padding="14dp" />
+
+
+                                    <RadioButton
+                                        style="@style/EditTextIngresoDatos"
+                                        android:id="@+id/apInfusorRB"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:button="@drawable/rb_insulin_pump"
+                                        android:padding="14dp" />
+
+                                </RadioGroup>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="5dp"
+                                android:gravity="start"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    style="@style/EditTextIngresoDatosSmall"
+                                    android:gravity="center"
+                                    android:visibility="gone"
+                                    android:id="@+id/textoRatioCHTV"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
 
                         <LinearLayout
                             style="@style/LinearLayoutSeccion">
@@ -241,18 +300,11 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
-                                android:gravity="start"
+                                android:gravity="center"
                                 android:orientation="horizontal">
-
-                                <TextView
-                                    style="@style/EditTextIngresoDatosSmall"
-                                    android:gravity="center"
-                                    android:visibility="gone"
-                                    android:id="@+id/textoRatioCHTV"/>
-
                             </LinearLayout>
-
                         </LinearLayout>
+
 
                         <LinearLayout
                             style="@style/LinearLayoutSeccion">
@@ -375,7 +427,7 @@
                                             style="@style/EditTextIngresoDatos"
                                             android:layout_width="wrap_content"
                                             android:selectAllOnFocus="true"
-                                            android:imeOptions="actionNext"
+                                            android:imeOptions="actionDone"
                                             android:layout_marginRight="5dp"
                                             android:hint="@string/mm"
                                             android:inputType="number"
