--- a/app/src/main/res/layout/fila_insulina_activa.xml
+++ b/app/src/main/res/layout/fila_insulina_activa.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_gravity="top"
     android:paddingBottom="10dp"
@@ -13,6 +14,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            app:srcCompat="@drawable/insulin_pen"
+            android:id="@+id/aplicacionIV"/>
 
         <TextView
             android:layout_width="0dp"
